fix pics on small screens

--- a/_sass/images.scss
+++ b/_sass/images.scss
@@ -24,6 +24,7 @@ html {
   }
 
   #jda {
+    display: block;
     margin: 10px auto;
     width: 500px;
   }
