--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -54,13 +54,13 @@
         width: 250px;
       }
     
-      #jaude {
-        margin: 20px 7.5%;
+    #jaude {
+        margin: 20px auto;
         width: 250px;
-      }
+    }
     
-      #jda {
-        margin: 20px 7.5%;
+    #jda {
+        margin: 20px auto;
         width: 250px;
-      }
+    }
 }
